Added new project

--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
         </div>
       </div>
 
+      <div class="project-card" data-aos="fade-up" data-aos-delay="100">
+        <img src="images/screencapture-mechboards.png" alt="MechBoards Screenshot">
+        <div class="content">
+            <h3>MechBoards</h3>
+            <p>Premium mechanical keyboards website with dark modern UI, responsive design, and product showcase.</p>
+            <div class="tech">HTML, CSS, Bootstrap</div>
+            <div class="buttons">
+                <a href="https://mechboards.netlify.app" target="_blank">Live Demo</a>
+                <a href="https://github.com/Ardiannaa008/MechBoards" target="_blank">GitHub</a>
+            </div>
+        </div>
+    </div>
+
+
       <div class="project-card" data-aos="fade-up" data-aos-delay="200">
         <img src="images/screencapture-m-student-portfolio-vercel-app-2025-08-26-19_56_24.png">
         <div class="content">
