Added my games widgets

--- a/index.html
+++ b/index.html
@@ -145,14 +145,16 @@
       </div>
     </div>
   </section>
-
-
+<div class="game-container">
+  <iframe frameborder="0" src="https://itch.io/embed/4169162?border_width=0&amp;bg_color=121010&amp;fg_color=eef0f0&amp;link_color=de62ef&amp;border_color=a98f8f" width="550" height="165"><a href="https://gummysnarl.itch.io/guessapp">GuessApp by gummySnarl</a></iframe>
+  <iframe frameborder="0" src="https://itch.io/embed/3723103?border_width=0&amp;bg_color=c7d4cb&amp;fg_color=121914&amp;link_color=05122a&amp;border_color=191313" width="550" height="165"><a href="https://gummysnarl.itch.io/truth-or-dare-web-edition">Truth or Dare - Web Edition by gummySnarl</a></iframe>
+</div>
 <section class="contact" id="contact" data-aos="fade-up">
   <h2 class="section-title">Contact Me</h2>
 
   <p class="contact-email">
     <i class="fa-solid fa-envelope"></i>
-    <span>ardiana.ajdari003@email.com</span>
+    <span>ardiana.ajdari003@gmail.com</span>
   </p>
 
   <div class="contact-icons">
